<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClientSignUpScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginBottom="20sp"
            android:background="#FF9800" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/please_enter_all_the_required_information_to_register"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/inputNameFieldRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/enter_first_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/inputSurnameFieldRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/enter_last_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/inputPasswordFieldRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/enter_password_registration"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/inputEmailFieldRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/inputAddressFieldRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:gravity="center"
            android:hint="@string/enter_address"
            android:inputType="textPostalAddress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enter_card_number"
                android:inputType="number" />

            <EditText
                android:id="@+id/enterCardDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="3"
                android:gravity="center"
                android:hint="@string/mm_yy"
                android:inputType="date" />

            <EditText
                android:id="@+id/editTextNumber2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:gravity="center"
                android:hint="@string/cvv"
                android:inputType="number" />

        </LinearLayout>

        <Button
            android:id="@+id/registerationCompleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF9800"
            android:text="Complete Registration" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>