<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/titleScreenLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginBottom="20sp"
            android:background="#FF9800" />

        <TextView
            android:id="@+id/titleScreenP1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alata"
            android:gravity="center"
            android:text="@string/welcome_to"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/titleScreenP2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25sp"
            android:fontFamily="@font/alata"
            android:text="@string/cuisine_royale"
            android:textSize="35sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="150sp"
            android:layout_marginBottom="25sp"
            app:srcCompat="@drawable/seg2105logo" />

        <EditText
            android:id="@+id/usernameInputField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/enter_username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/passwordInputField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:backgroundTint="#FF9800"
            android:fontFamily="@font/alata"
            android:text="@string/login" />

        <Button
            android:id="@+id/registerClientButton"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF9800"
            android:fontFamily="@font/alata"
            android:text="@string/register_as_a_client" />

        <Button
            android:id="@+id/registerCookButton"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF9800"
            android:fontFamily="@font/alata"
            android:text="@string/register_as_a_cook" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>