<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CookSignUpScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginBottom="20sp"
            android:background="#FF9800" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/please_enter_all_the_required_information_to_register"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/inputNameCook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/enter_first_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/inputSurnameCook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/enter_last_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/inputUsernameCook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_username"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/inputPasswordCook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/enter_password_registration"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/inputEmailCook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputStreetAddressCook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="15"
                android:gravity="center"
                android:hint="Enter Street Address"
                android:inputType="textPostalAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputCityAddressCook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Enter City"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/inputCountryAddressCook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Enter Country"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/inputPostalAddressCook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Enter Postal Code"
                android:inputType="textPersonName" />
        </LinearLayout>

        <EditText
            android:id="@+id/inputCookDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:gravity="start|top"
            android:hint="@string/enter_a_short_description_of_yourself"
            android:inputType="textMultiLine"
            android:lines="3"
            android:maxLines="3"
            android:minLines="1" />

        <Button
            android:id="@+id/uploadChequeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF9800"
            android:text="@string/upload_void_cheque" />

        <Button
            android:id="@+id/registerationCompleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF9800"
            android:text="@string/complete_registration" />

        <Button
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FE9701"
            android:text="Home" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>