<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoggedInScreen">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="#FF9800" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:fontFamily="sans-serif"
            android:text="@string/welcome_placeholder_what_would_you_like_to_do_today"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/placeHolderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:fontFamily="sans-serif"
            android:text="@string/more_features_coming_soon"
            android:textAlignment="center"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/placeHolderImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/seg2105logo" />

        <TextView
            android:id="@+id/roleSpecifier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/logOutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF9800"
            android:fontFamily="@font/alata"
            android:onClick="logOutOnClick"
            android:text="@string/log_out" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>